# fhir-mcp-server

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE-FIX.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  server.json
.choreo/: component.yaml
.github/: CODEOWNERS
.github/workflows/: publish-mcp-registry.yml  release.yaml  test.yaml
src/fhir_mcp_server/: __init__.py  __main__.py  server.py  utils.py
src/fhir_mcp_server/oauth/: __init__.py  client_provider.py  common.py  server_provider.py  types.py
tests/: README.md  conftest.py  test_utils.py
tests/e2e/: conftest.py  test_tools.py
tests/integration/: test_integration.py
tests/unit/: test_utils.py
tests/unit/oauth/: __init__.py  test_client_provider.py  test_common.py  test_server_provider.py  test_types.py
